--- a/zzz.yml
+++ b/zzz.yml
@@ -1,6 +1,4 @@
 - name: Hello World Sample
   hosts: all
-  tasks:
-    - name: Hello Message
-      debug:
-        msg: "N3yron zzz!"
+  roles:
+  - message
