--- a/roles/message/tasks/main.yml
+++ b/roles/message/tasks/main.yml
@@ -1,8 +1,6 @@
-- name: Show message
-- name: Hello Message
+- name: Hello Message 123
     debug:
-    msg: "Hello N3yron!"
-
+    msg: "Hello N3yron 123!"
 - name: "Check if Google is accessible."
   uri:
     url: https://google.com
